app/frontend/styles/style.css
/* CSS for all pages */

p,
h1,
h2,
input {
  font-family: Roboto, sans-serif;
}

.hidden {
  display: none;
}

ul {
  list-style: none;
}

/************* LOGIN & REGISTER PAGE SECTION *************/
body {
  width: 100%;
  margin: 0;
  background: #181818;
  font-family: Roboto, sans-serif;
}

.container_layout {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: stretch;
  width: 100%;
  height: 100%;
}

.container_intro_login {
  display: flex;
  flex-direction: column;
  position: relative;
  padding: 1.7em;
  width: 40%;
  min-height: 100%;
  color: #fcfcfc;
  left: 2%;
  font-size: xx-large;
  margin-top: 5%;
  background-image: url("../images/abstract2.jpeg");
  z-index: 2;
}

.container_intro_register {
  display: flex;
  flex-direction: column;
  position: relative;
  padding: 2.6em;
  width: 40%;
  min-height: 100%;
  color: #fcfcfc;
  left: 2%;
  font-size: xx-large;
  margin-top: 5%;
  background-image: url("../images/abstract2.jpeg");
  z-index: 1;
}

.container_login,
.container_register {
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  right: 2%;
  width: 40%;
  min-height: 100%;
  background: #004155;
  color: #fcfcfc;
  border-radius: 40px;
  margin-top: 5%;
  backdrop-filter: blur(10px);
  box-shadow: 20px 20px 40px -6px rgba(0, 0, 0, 0.2);
  transition: all 0.2s ease-in-out;
  text-align: center;
  padding: 1em;
}

input {
  background: #000000;
  width: 100%;
  padding: 1em;
  margin-bottom: 2em;
  border: none;
  box-shadow: 4px 4px 60px rgba(0, 0, 0, 0.2);
  color: rgb(252, 252, 252);
  font-family: Roboto, sans-serif;
  font-weight: 500;
  transition: all 0.2s ease-in-out;
  border-radius: 10px;
}

div > button {
  width: 50%;
  height: 100%;
  padding: 10px;
  background: #60bfba;
  border-radius: 50px;
  border: none;
}

a {
  font-family: "Roboto Light", sans-serif;
  font-weight: 100;
  color: rgba(252, 252, 252, 0.7);
  text-decoration: none;
}

a:hover {
  color: #60bfba;
  transition: all 0.3s ease-in-out;
}

.form-wrapper > h3 {
  font-family: Rock Salt, fantasy;
  font-size: x-large;
}

.container_intro_login > h3 {
  font-family: "Roboto Thin", sans-serif;
  font-weight: 100;
}

.container_intro_register > h3 {
  font-family: "Roboto Thin", sans-serif;
  font-weight: 100;
}

/*********** SEARCH PAGE SECTION *************/
.search_content {
  display: flex;
  flex-direction: column;
  width: 70%;
}

.form_container {
  height: 20%;
  width: 100%;
  position: relative;
  left: 40%;
  margin-top: 5%;
}

#query {
  width: 40%;
  margin: 1em;
  padding: 1.5em;
  background-color: #004155;
  box-sizing: border-box;
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 56px;
}

#search_button {
  padding: 1.5em;
  color: #fcfcfc;
  background-color: #004155;
  box-sizing: border-box;
  border: none;
  box-shadow: 20px 20px 40px -6px rgba(0, 0, 0, 0.25);
  border-radius: 56px;
}

#search_selector {
  padding: 1.4em;
  border-radius: 56px;
  border: none;
  background-color: #004155;
  color: #fcfcfc;
}

.activity_list_search {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  position: relative;
  left: 35%;
  width: 70%;
  transition: 0.3s;
  margin-top: 5%;
  margin-bottom: 5%;
}


/*********** ACTIVITY LIST SECTION *************/
.content {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.activity_list_home {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  position: relative;
  left: 22%;
  width: 75%;
  transition: 0.3s;
  margin-top: 5%;
  margin-bottom: 5%;
}

.activity_image {
  filter: grayscale(1);
  box-sizing: border-box;
  display: block;
  width: 100%;
  transition: 0.3s;
}

.activity_image:hover {
  filter: grayscale(0);
  transform: scale(1.1);
}

.activity_link {
  display: flex;
  width: 50%;
  margin: 0;
  overflow: hidden;
}

.activity_container {
  display: flex;
  position: relative;
  margin: 4px;
}

.gradient_background {
  position: absolute;
  top: -5px;
  left: -5px;
  padding: 25px 15px 15px;
  width: 100%;
  height: 20%;
  margin: 0;
  background: linear-gradient(180deg, rgba(0, 0, 0, 0.75) 0%, rgba(255, 255 ,255 , 0) 100%);
);
  transition: 0.3s;
}

.button_participate {
  position: absolute;
  bottom: 8px;
  right: 16px;
  background-color: #60bfba;
  padding: 3%;
  border-radius: 20px;
  border: none;
}

.participants {
  position: absolute;
  top: 8px;
  right: 16px;
  color: #FCFCFC;
  font-weight: bold;
}

.publisher {
  position: absolute;
  top: 12%;
  left: 16px;
  color: #FCFCFC;
}

.activity_name {
  position: absolute;
  bottom: 25px;
  left: 16px;
  color: #60bfba;
}

.activity_description {
  position: absolute;
  bottom: 8px;
  left: 16px;
  color: #60bfba;
}

.activity_location {
  position: absolute;
  top: 8px;
  left: 16px;
  color: #FCFCFC;
}

.activity_time {
  position: absolute;
  top: 20%;
  left: 16px;
  color: #FCFCFC;
}


/************* LEFT SIDE NAVIGATION *************/

.nav_container {
  height: 100%;
  width: 20%;
  position: fixed;
  top: 0;
  left: 0;
  background-color: #181818;
  overflow-x: hidden;
  padding-top: 10%;
  border-right: 0.5px solid rgba(252, 252, 252, 0.5);
}

.navbar_links {
  padding: 6px 8px 6px 16px;
  margin-bottom: 10%;
  text-decoration: none;
  font-size: 20px;
  color: #fcfcfc;
  display: block;
}

.navbar_links:hover {
  color: #4db9b9;
  transition: all 0.3s ease-in-out;
  font-size: larger;
}

.navbar_links.active  {
  color: #4db9b9;
  font-size: x-large;
}

.side_nav {
  list-style-type: none;
}



/************* USER PAGE SECTION *************/
/*shared classes between user and account-settings*/
.activity_content {
  width: 80%;
  float: right;
  margin: auto;
  color: #fcfcfc;
}

.activity_content h1 {
  text-align: start;
  padding: 2em;
}

.user_header {
  display: flex;
  width: 100%;
  height: 30%;
  justify-content: right;
  margin-top: 5%;
  margin-bottom: 10%;
}
/* ... */

